<resources>
    <string name="app_name">rma20hastornedim52</string>
    <string name="add_transaction">Add transaction</string>
    <string name="global_amount">Global amount: %1$.2f</string>
    <string name="limit">Limit: \t %1$.2f</string>
    <string name="double_to_string">%1$.2f</string>
    <string name="int_to_string">%1$d</string>
    <string name="individualincome">Individual income</string>
    <string name="individualpayment">Individual payment</string>
    <string name="regularincome">Regular income</string>
    <string name="regularpayment">Regular payment</string>
    <string name="purchase">Purchase</string>
    <string name="all">All</string>
    <string name="month_year">%1$s, %2$d</string>
    <string name="edit_transaction">Edit transaction</string>
    <string name="title">Title</string>
    <string name="amount">Amount</string>
    <string name="type">Type</string>
    <string name="description">Description</string>
    <string name="date">Date(DD.MM.YYYY)</string>
    <string name="transaction_interval">Transaction interval(days)</string>
    <string name="end_date">Transaction end date</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="no_date">No end date</string>
    <string name="dialog_message_delete">Are you sure you want to delete transaction?</string>
    <string name="dialog_message_undo">Are you sure you want to undo delete transaction?</string>
    <string name="dialog_message_save">Are you sure you want to save transaction?</string>
    <string name="dialog_title">Allert Dialog box</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="incorrect_data">Incorrect data</string>
    <string name="budget">Edit budget</string>
    <string name="month_limit">Monthly limit</string>
    <string name="total_limit">Yearly limit</string>
    <string name="budget_total_amount">Total amount of your budget</string>
    <string name="save_changes">Save changes</string>
    <string name="spinner_graph">Show graph by:</string>
    <string name="offline_adding">Offline adding</string>
    <string name="offline_editing">Offline editing</string>
    <string name="offline_deleting">Offline deleting</string>
    <string name="undo">Undo</string>
</resources>
