<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewEditOrAdd"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:text="@string/edit_transaction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="250dp"
        android:layout_height="480dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEditOrAdd">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewTitleEdit"
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:layout_weight="2"
                    android:text="@string/title" />

                <EditText
                    android:id="@+id/editTextTitle"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:ems="10"
                    android:inputType="textPersonName" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewAmountEdit"
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:layout_weight="2"
                    android:text="@string/amount" />

                <EditText
                    android:id="@+id/editTextAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:ems="10"
                    android:inputType="numberDecimal" />

            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewTypeEdit"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_weight="2"
                    android:text="@string/type" />

                <Spinner
                    android:id="@+id/spinnerTransactionType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3" />

            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_weight="5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewDescriptionEdit"
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:layout_weight="2"
                    android:text="@string/description" />

                <EditText
                    android:id="@+id/editTextDescription"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_weight="3"
                    android:ems="10"
                    android:inputType="textMultiLine"
                    android:lines="3"
                    android:text="Name" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewDateEdit"
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:layout_weight="2"
                    android:text="@string/date" />

                <EditText
                    android:id="@+id/editTextDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:ems="10"
                    android:inputType="date" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewTransactionIntervalEdit"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_weight="2"
                    android:text="@string/transaction_interval" />

                <EditText
                    android:id="@+id/editTextTransactionInterval"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:ems="10"
                    android:inputType="numberSigned" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewEndDateEdit"
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:layout_weight="2"
                    android:text="@string/end_date" />

                <EditText
                    android:id="@+id/editTextEndDateEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="date"
                    android:layout_weight="3" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonSave"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/save" />

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/buttonDelete"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/delete" />

            </LinearLayout>
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/textViewOflineMode"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="50dp"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:text="@string/offline_adding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>